syntax = "proto3";

option java_package = "com.example.auth";
option java_multiple_files = true;

service AuthService {
    rpc CheckToken (CheckTokenRequest) returns (CheckTokenResponse);
}

message CheckTokenRequest {
    string token = 1;
}

message CheckTokenResponse {
    bool valid = 1;
    string user_id = 2;
    string role = 3;
}
